apps/tailscale/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-tailscale
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
