apps/tailscale/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale
  namespace: monitoring
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: monitoring-grafana
      port:
        number: 80
  tls:
    - hosts:
        - monitoring-grafana-tailscale
